variables.Variables.scala.error
Compilation error:
Variables:9: error: illegal start of simple expression
while (var dejaFait!= var nbPas) {
       ^Variables:13: error: ')' expected but '}' found.
	}
        ^