variables.Variables.scala.code
var nbPas: Int = 0 
while (!estSurBiscuit) {
  avance();
  nbPas = nbPas + 1;
}

prendBiscuit()
var dejaFAit: Int = 0
while (var dejaFait!= var nbPas) {
  recule()
}